# dasch-science-lambda

./: .gitignore  .gitlab-ci.build.yml  .gitlab-ci.package.yml  .gitlab-ci.yml  Cargo.toml  Dockerfile.build  Dockerfile.lambda  README.md  build_script.sh  go.sh
crates/fitswcs-sys/: Cargo.toml  README.md  build.rs
crates/fitswcs-sys/ext/cfitsio/: .gitignore  Makefile.in
crates/fitswcs-sys/ext/wcslib/: .gitignore  GNUmakefile
crates/fitswcs-sys/ext/wcslib/doxygen/: Doxyfile  GNUmakefile  README  doxextr.l  mainpage.dox
crates/fitswcs-sys/ext/wcslib/html/: annotated.html  cel_8h.html  cel_8h_source.html  classes.html  deprecated.html  diagnostics.html  dir_af99bb3c152a306abd27951285ad1127.html  dis_8h.html  dis_8h_source.html  doxygen_crawl.html  files.html  fitshdr_8h.html  fitshdr_8h_source.html  fortran.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  (+140 more)
crates/fitswcs-sys/src/: cfitsio.rs  lib.rs  wcslib.rs
json-schemas/: cutout_request.json  querycat_request.json  queryexps_request.json
src/: cutout.rs  fitsfile.rs  gscbin.rs  lib.rs  main.rs  mosaics.rs  querycat.rs  queryexps.rs  refnums.rs  s3buffer.rs  s3fits.rs  wcs.rs
(+138 files in other folders)
