[package]
name = "dasch-science-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.47"
lambda_runtime = "0.13"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
