[package]
name = "dasch-science-lambda"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/fitswcs-sys", "."]

[dependencies]
anyhow = "^1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.47"
aws-sdk-s3 = "1.52"
base64 = "0.22"
fitswcs-sys = { path = "crates/fitswcs-sys", version = "0.1.0" }
flate2 = { version = "^1", features = ["zlib"], default-features = false }
lambda_http = "0.13"
lambda_runtime = "0.13"
libc = "0.2"
# ndarray-interp requires this version of ndarray:
ndarray = "0.15"
ndarray-interp = "0.4"
once_cell = "^1.20"
serde = "1.0"
serde_bytes = "0.11"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
